documentation/src/pages/styles.module.css
/* stylelint-disable docusaurus/copyright-header */

/**
 * CSS files with the .module.css suffix will be treated as CSS modules
 * and scoped locally.
 */

.heroBanner {
   padding: 4rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
   background: #2d3338;
}

@media screen and (max-width: 966px) {
   .heroBanner {
      padding: 2rem;
   }
}

.buttons {
   display: flex;
   align-items: center;
   justify-content: center;
}

.features {
   display: flex;
   align-items: center;
   padding: 2rem 0;
   width: 100%;
}

.featureImage {
   height: 200px;
   width: 200px;
}

.feature h3 {
   text-align: center;
}

.featuresRow {
   justify-content: center;
}

.heroSlogan {
   font-size: clamp(1.6rem, 5vw, 3.75rem);
   line-height: 1.2;
   color: var(--ifm-color-white) !important;
}

.heroSlogan strong {
   color: #4dbf4d;
}

.gettingStartedButton {
   background: #ffffff;
   color: var(--ifm-color-gray-900) !important;
}

.gettingStartedButton:hover {
   background: #afafaf;
   color: #ffffff;
}

